Fix/improve committee page visibilty (#1895)
* Added .dark-card that adds an overlay to cards and fixed the rounding of the cards

* Added rainbow-barf support and updated default values

--- a/resources/assets/sass/rainbowbarf.scss
+++ b/resources/assets/sass/rainbowbarf.scss
@@ -36,6 +36,21 @@ body, .card, .navbar {
   margin: 0;
   overflow: hidden;
 }
+.dark-card{
+  &::after {
+    background: linear-gradient(124deg, #ff2400, #e81d1d, #e8b71d, #e3e81d, #1de840, #1ddde8, #2b1de8, #dd00f3
+    , #dd00f3);
+    opacity: 25%;
+    background-size: 1800% 1800%;
+    animation: rainbow 18s ease infinite;
+  }
+  &:hover::after {
+    background: linear-gradient(124deg, #ff2400, #e81d1d, #e8b71d, #e3e81d, #1de840, #1ddde8, #2b1de8, #dd00f3
+    , #dd00f3);
+    background-size: 1800% 1800%;
+    opacity: 15%;
+  }
+}
 
 @keyframes rotate {
   100% {
